--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ flask = "^3.0.3"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 plexapi =  "4.15.16"
-
+pymongo = "4.9.1"
 
 [build-system]
 requires = ["poetry-core"]
