--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 plexapi =  "4.15.16"
 pymongo = "^4.9.1"
+flask-jwt-extended = "^4.6.0"
+bcrypt = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
